--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Using SVG Icons</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -10,7 +10,7 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <ul class"list-group-inline">
+  <ul class="list-group-inline">
     <li class="center-text">
       <a class="block" href="#">
         <i class="icon i-96">
